[gd_scene load_steps=2 format=3 uid="uid://saga_world_map"]

[ext_resource type="Script" path="res://scripts/saga_world_map.gd" id="1_script"]

[node name="SagaWorldMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="TopBar"]
layout_mode = 2
size_flags_vertical = 4
text = "← Zurück"

[node name="WorldLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Welt 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="TopBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="LevelContainer" type="Control" parent="ScrollContainer"]
custom_minimum_size = Vector2(720, 2000)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
